[modify] レイアウト修正。

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -45,7 +45,7 @@
         <div class="col-md-8 col-md-offset-2 text-center">
           <div class="display-t">
             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-              <h1>ORANGE</h1>
+              <h1>SHIROBUHI</h1>
               <p>
                 <a class="btn btn-primary btn-lg btn-learn" href="/courses">Take A Course</a>
               </p>
@@ -59,65 +59,60 @@
   <div id="fh5co-explore" class="fh5co-bg-section">
     <div class="container">
       <div class="row animate-box">
-        <div class="col-md-6 col-md-offset-3 text-left fh5co-heading">
-          <h2>Take A Course</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-          </p>
+        <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+          <h2>動画で学ぶセキュリティ対策</h2>
+          <p>攻撃ケースや被害情報から、「自分でできるセキュリティ対策」を動画で学んでいくことができます。</p>
         </div>
       </div>
     </div>
     <div class="fh5co-explore fh5co-explore1">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-md-push-5 animate-box">
+          <div class="col-md-8 col-md-offset-2 animate-box">
             <%= image_tag("work_1.png", alt: "work", class: "img-responsive")%>
           </div>
-          <div class="col-md-4 col-md-pull-8 animate-box">
+          <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 animate-box">
             <div class="mt">
-              <h3>We Want You To Learn English</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h3 >動画の構成</h3>
+              <p>主に以下の3つで構成されています。</p>
               <ul class="list-nav">
-                <li>
-                  <i class="icon-check2"></i>Far far away, behind the word</li>
-                <li>
-                  <i class="icon-check2"></i>There live the blind texts</li>
-                <li>
-                  <i class="icon-check2"></i>Separated they live in bookmarksgrove</li>
+                <li><i class="icon-check2"></i>動画の概要</li>
+                <li><i class="icon-check2"></i>自分でできるセキュリティ対策</li>
+                <li><i class="icon-check2"></i>セキュリティ対策をしていない場合の被害</li>
               </ul>
               <p>
                 <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774">
                   <i class="icon-play"></i>
-                  Watch Video</a>
+                  Sample Video
+                </a>
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="fh5co-explore">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 animate-box">
-            <div class="mt">
-              <div>
-                <h4>
-                  <i class="icon-user"></i>Real Project For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
-                </p>
-              </div>
-              <div>
-                <h4>
-                  <i class="icon-video2"></i>Real Project For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                </p>
-              </div>
-              <div>
-                <h4>
-                  <i class="icon-shield"></i>Real Project For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.
-                </p>
-              </div>
+  <div class="fh5co-explore" style="background-image:url(<%= asset_path "img_bg_1.jpg"%>);" data-stellar-background-ratio="0.5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 animate-box">
+          <div class="mt">
+              <h3 >こだわり</h3>
+            <div>
+              <h4>
+                <i class="icon-user"></i>身近に感じるセキュリティ</h4>
+                <p>セキュリティ対策をしない場合、どのような被害を受ける可能性があるかご説明します。その際、状況をできるだけ日常に近づけることで他人事ではなく、実際に身の回りで起こり得ると感じて貰います。</p>
+            </div>
+            <div>
+              <h4>
+                <i class="icon-video2"></i>実践しやすい動画</h4>
+              <p>セキュリティ対策の方法だけでなく、環境構築などの事前作業まで動画にしています。あくまで、実践できる動画を目指しています。</p>
+            </div>
+            <div>
+              <h4>
+                <i class="icon-paper"></i>動画の内容をテキストで</h4>
+              <p>動画の内容をテキスト形式で見ることができます。</p>
             </div>
           </div>
         </div>
@@ -130,8 +125,7 @@
     <div class="container">
       <div class="row animate-box">
         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-          <h2>Lets Get Started</h2>
-          <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+          <h2>はじめてみましょう</h2>
         </div>
       </div>
       <div class="row animate-box">
@@ -147,7 +141,7 @@
   <footer id="fh5co-footer" role="contentinfo">
     <div class="container">
       <div class="row row-pb-md">
-        <div class="col-md-2 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-6 col-md-push-1">
+        <div class="col-md-2 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3 col-md-push-1">
           <h4 class="text-center"><a href="/riyokiyaku">利用規約</a></h4>
         </div>
       </div>
