--- a/app/views/layouts/_navbar_link.html.erb
+++ b/app/views/layouts/_navbar_link.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-1">
     <div id="fh5co-logo">
-      <a href="index.html">Orange<span>.</span>
+      <a href="index.html">SHIROBUHI<span>.</span>
       </a>
     </div>
   </div>
@@ -13,7 +13,7 @@
       <li class="<%= courses_active%>">
         <%= link_to "Courses", courses_path%>
       </li>
-      
+
       <!-- ベータ版では実装しないため、一時的にコメントアウト
       <li class="<%= pricing_active%>">
         <%= link_to "Pricing", pricing_path%>
