--- a/app/views/static_pages/videos.html.erb
+++ b/app/views/static_pages/videos.html.erb
@@ -92,7 +92,7 @@
 				<div class="col-lg-4 col-md-4">
 					<div class="fh5co-blog animate-box">
 						<div class="blog-text">
-							<h3>ネットワークセキュリティ</h3>
+							<h3>関連動画</h3>
 							<h4>
 								<a href="#">環境の構築</a>
 							</h4>
