--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -87,8 +87,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Showcase of A Finish Projects</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>コース 一覧</h2>
+					<p>セキュリティ対策を行いたいコースをお選び下さい。</p>
 				</div>
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 
 				<% for num in 1..@courses_id_name_length %>
 				  <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					  <%= link_to ({controller: 'static_pages', action: 'list', id: @courses_id_name[num].downcase}) do%>
+					  <%= link_to ({controller: 'static_pages', action: 'list_courses', id: @courses_id_name[num].downcase}) do%>
 						  <!--  「project-1.jpg」と「alt」を変数化し、DBに格納する -->
 					    <%= image_tag("project-1.jpg",alt:"Free HTML5 Website Template by FreeHTML5.co",class:"img-responsive") %>
 						  <h3><%= @courses_id_name[num] %></h3>
@@ -127,21 +127,12 @@
 			-->
 			</div>
 		</div>
+		<!--
 		<div class="container">
 			<div class="row">
 				<div class="features">
 					<div class="col-md-4 animate-box">
-						<h4>We have coolest features of this course</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-						</p>
-					</div>
-					<div class="col-md-4 animate-box">
 						<h4>Great teachers that we have</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-						</p>
-					</div>
-					<div class="col-md-4 animate-box">
-						<h4>Steps by steps turorial session</h4>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
 						</p>
 					</div>
@@ -153,11 +144,20 @@
 				<div class="col-md-12 text-center animate-box">
 					<p><a class="btn btn-primary btn-lg btn-learn" href="#">Create A Free Course</a></p>
 				</div>
-				-->
 
 			</div>
 		</div>
+				-->
 	</div>
+  <footer id="fh5co-footer" role="contentinfo">
+    <div class="container">
+      <div class="row row-pb-md">
+        <div class="col-md-2 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3 col-md-push-1">
+          <h4 class="text-center"><a href="/">Top</a></h4>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 	<!--
