--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1026,7 +1026,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-started .fh5co-heading h2 {
-  color: #fff;
+  color: #000;
   margin-bottom: 20px !important;
 }
 
@@ -1242,7 +1242,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-footer {
-  background: #efefef;
+  background: #000
 }
 
 #fh5co-footer .fh5co-footer-links {
@@ -1914,4 +1914,12 @@ table {
 .my-video-dimensions{
   width: 100%;
   height: 264px;
+}
+
+#fh5co-started {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+.fh5co-explore .fh5co-explore-p p{
+  color: #000;
 }
