--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -38,7 +38,7 @@
       </div>
     </div>
   </nav>
-  <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(<%= asset_path "img_bg_1.jpg"%>);" data-stellar-background-ratio="0.5">
+  <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(<%= asset_path "img_bg_top.jpg"%>);" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -93,11 +93,12 @@
     </div>
   </div>
 
-  <div class="fh5co-explore" style="background-image:url(<%= asset_path "img_bg_1.jpg"%>);" data-stellar-background-ratio="0.5">
+  <div class="fh5co-explore" style="background-image:url(<%= asset_path "img_bg_2.jpg"%>);" data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 animate-box">
-          <div class="mt">
+          <div class="mt fh5co-explore-p">
               <h3 >こだわり</h3>
             <div>
               <h4>
@@ -120,8 +121,8 @@
     </div>
   </div>
 
-  <div id="fh5co-started" style="background-image:url(<%= asset_path " img_bg_2.jpg"%>);">
-    <div class="overlay"></div>
+  <!--div id="fh5co-started" style="background-image:url(<%= asset_path "img_bg_2.jpg"%>);"-->
+  <div id="fh5co-started">
     <div class="container">
       <div class="row animate-box">
         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
