--- a/app/views/static_pages/videos.html.erb
+++ b/app/views/static_pages/videos.html.erb
@@ -64,7 +64,7 @@
 				<div class="col-lg-7 col-md-7">
 					<div class="fh5co-blog animate-box">
 						<video id="my-video" class="video-js vjs-default-skin" controls preload="auto" width="100%" height="264" poster="" data-setup="{}">
-							<source src="<%= asset_path "movie/sample.mp4"%>" type="video/mp4">
+              <source src="<%= asset_path "movie/#{@list_video_file}"%>" type="video/mp4">
 							<p class="vjs-no-js">
 								TEST
 								<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
