--- a/app/views/layouts/_navbar_link.html.erb
+++ b/app/views/layouts/_navbar_link.html.erb
@@ -1,8 +1,7 @@
 <div class="row">
   <div class="col-xs-1">
     <div id="fh5co-logo">
-      <a href="index.html">SHIROBUHI<span>.</span>
-      </a>
+      <%= link_to "SHIROBUHI", root_path %>
     </div>
   </div>
   <div class="col-xs-11 text-right menu-1">
