[fix] テンプレート情報を修正
テンプレートの記載が残っていたので、修正した。

--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -99,27 +99,27 @@
 				  <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
 					  <%= link_to ({controller: 'static_pages', action: 'list_courses', id: @courses_id_name[num].downcase}) do%>
 						  <!--  「project-1.jpg」と「alt」を変数化し、DBに格納する -->
-					    <%= image_tag("project-1.jpg",alt:"Free HTML5 Website Template by FreeHTML5.co",class:"img-responsive") %>
+					    <%= image_tag("project-1.jpg",alt:"背景1",class:"img-responsive") %>
 						  <h3><%= @courses_id_name[num] %></h3>
 					  <% end %>
 				  </div>
 				<% end %>
 				<!--
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><%= image_tag("project-2.jpg",alt:"Free HTML5 Website Template by FreeHTML5.co",class:"img-responsive")%>
+					<a href="#"><%= image_tag("project-2.jpg",alt:"背景2",class:"img-responsive")%>
 						<h3><%= @courses_id_name[2] %></h3>
 						<span>View Course</span>
 					</a>
 				</div>
 
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><%= image_tag("project-3.jpg",alt:"Free HTML5 Website Template by FreeHTML5.co",class:"img-responsive")%>
+					<a href="#"><%= image_tag("project-3.jpg",alt:"背景3",class:"img-responsive")%>
 						<h3><%= @courses_id_name[3] %></h3>
 						<span>View Course</span>
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-					<a href="#"><%= image_tag("project-9.jpg",alt:"Free HTML5 Website Template by FreeHTML5.co",class:"img-responsive")%>
+					<a href="#"><%= image_tag("project-9.jpg",alt:"背景4",class:"img-responsive")%>
 						<h3><%= @courses_id_name[4] %></h3>
 						<span>View Course</span>
 					</a>
