[fix] 利用規約の修正

--- a/app/views/static_pages/riyokiyaku.html.erb
+++ b/app/views/static_pages/riyokiyaku.html.erb
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row animate-box">
         <div class="col-md-6 col-md-offset-3 text-left fh5co-heading">
-          <p>この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
+          <p>この利用規約（以下，「本規約」といいます。）は，Shirobuhi（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
 
           <h3>第1条（適用）</h3>
 
