--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top nav-top">
       <a class="navbar-brand col-4 offset-4 text-center" href="#">SHIROBUHI</a>
       <% if user_signed_in? then%>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <%= link_to "Logout", destroy_user_session_path, class: "navbar-brand col-4 offset-8 text-center" %>
       <% else %>
-        <%= link_to "Login", new_user_session_path %>
+        <%= link_to "Login", new_user_session_path, class: "navbar-brand col-4 text-center" %>
       <% end %>
     </nav>
 
