--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Sign Up</h1>
+  <h1 class="mt-3">Sign Up</h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-signin"}) do |f| %>
   <%= devise_error_messages! %>
