--- a/app/views/static_pages/mypage.html.erb
+++ b/app/views/static_pages/mypage.html.erb
@@ -6,32 +6,47 @@
     </ul>
 
     <div class="tab-content">
-      <div id="content-upload" class="tab-pane" role="tabpanel">
+      <div id="content-upload" class="tab-pane active" role="tabpanel">
         <div class="content">
-          <p class="notice"><%= notice %></p>
-    <%= form_tag(search_path, class: 'mt-2', method: :get) do %>
-      <div class="input-group">
-        <div class="input-group-append">
-          <button type="submit" class="btn btn-primary"><i class="fa fa-search" style="font-size: 1.5rem;"></i></button>
-        </div>
-      </div>
-    <% end %>
+          <div>
+          </div>
+          <%= form_for(@video, url: mypage_path, html: {class: 'mt-2'}) do |f| %>
+          <div class="form-group mb-3">
+            <label class="col-form-label">タイトル</label>
+            <%= f.text_field :video_name, class: "form-control", placeholder: "キーワードを入力して下さい" %>
+          </div>
+          <div class="form-group mb-3">
+            <label class="col-form-label">説明</label>
+            <%= f.text_area :description, class: "form-control", placeholder: "説明を入力して下さい" %>
+          </div>
+          <div class="form-group mb-3">
+            <label class="col-form-label">タグ</label>
+            <ul id='tag'></ul>
+          </div>
+          <div class="form-group mb-3" id="form-file">
+            <label class="col-form-label">ビデオ</label></br>
+            <%= f.file_field :video_file_name %>
+          </div>
+          <div class="form-group mb-3">
+            <button type="submit" class="btn btn-primary">Up load</button>
+          </div>
+        <% end %>
         </div>
       </div>
       <div id="content-history" class="tab-pane" role="tabpanel">
         <div class="content">
           <div class="col-12 mx-auto my-1 infinite-content">
-          <% for num in 0..@initial_video_title.size-1 do %>
+          <!-- for num in 0..@initial_video_title.size-1 do -->
             <div class="card">
               <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;">
               <div class="card-body">
-                <h4 class="card-title"><%= @initial_video_title[num] %></h4>
+                <h4 class="card-title"><!--= @initial_video_title[num] --></h4>
                 <i class="fa fa-thumbs-up" style="font-size: 1.5rem;">
                   <span class="badge badge-pill badge-secondary" id="good-num">100</span>
                 </i>
               </div>
             </div>
-          <% end %>
+          <!--% end %-->
           </div>
         </div>
       </div>
@@ -40,12 +55,16 @@
   </div>
 <%= content_for :search_pagination do %>
     <script>
-      var active_nav = 'search_field_keyword'
+      var active_nav = 'search_field_upload'
       var rails_text_field = '<%= text_field_tag :tags, "", class: "form-control", placeholder: "キーワードを入力して下さい" %>' 
       var hidden_params_keyword = '<input type="hidden" name="search_type" id="search_type" value="search_field_keyword">'
       var hidden_params_tag = '<input type="hidden" name="search_type" id="search_type" value="search_field_tag">'
 
-      /*$(document).ready(function(){
+      $(document).ready(function(){
+        $('#tag').tagit({
+          fieldName: "category_tag",
+        });
+        /*
         if($('.nav-search-item.active').children().attr('id') == 'search_field_keyword'){
           $('div.input-group').prepend(rails_text_field);
           $('div.input-group').prepend(hidden_params_keyword);
@@ -60,8 +79,15 @@
           });
           $('div.input-group').prepend(hidden_params_tag);
         }
+        */
       });
-      */
+      $('form').on('change', 'input[type=file]', function(){
+        var file = this.files[0];
+        console.log(file)
+        var video = document.createElement('video');
+        var fileObject = URL.createObjectURL(file);
+        video.src = fileObject;
+      });
 
       $('.nav-search-item a').on('click', function(e){
         e.preventDefault();
@@ -106,7 +132,5 @@
         history: false,
       });
 
-
   </script>
   <% end %>
-
