[updated] メニューバーリンクの有効無効状態判定の修正
現在のパスがhomeの時、それを判定する条件を明確にした。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
     <script>
       $(function(){
         let current_path = location.pathname.split('/')[1];
-        if(current_path === ''){
+        if(current_path !== 'search' && current_path !== 'mypage'){
           current_path = 'home';
         }
         $(`#item-${current_path}`).addClass('disabled');
