--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+    <%= yield :video_js_css %>
+    <%= yield :video_js %>
 
   </head>
 
