--- a/app/views/static_pages/pagination.html.erb
+++ b/app/views/static_pages/pagination.html.erb
@@ -1,6 +1,8 @@
 <% for num in 0..@addition_video_title.size-1 do %>
   <div class="card">
+    <a href="/video/<%= @addition_video_id[num] %>">
     <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;"></video>
+    </a>
     <div class="card-body">
       <h4 class="card-title"><%= @addition_video_title[num] %></h4>
       <i class="fa fa-thumbs-up" style="font-size: 1.5rem;">
