--- a/app/views/static_pages/mypage.html.erb
+++ b/app/views/static_pages/mypage.html.erb
@@ -32,6 +32,7 @@
             <button type="submit" class="btn btn-primary">Up load</button>
           </div>
         <% end %>
+          <%= link_to "delete", user_registration_path, class: "nav-link ml-auto btn btn-outline-light", style: "font-size: 0.5rem", method: "delete" %>
         </div>
       </div>
       <div id="content-history" class="tab-pane" role="tabpanel">
