[add] いいね機能の追加

--- a/app/views/static_pages/mypage_pagination.html.erb
+++ b/app/views/static_pages/mypage_pagination.html.erb
@@ -1,11 +1,17 @@
 <% for num in 0..@addition_video_title.size-1 do %>
-  <div class="card">
-    <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;"></video>
+  <div class="card mb-3">
+    <a href="/video/<%= @addition_video_id[num] %>">
+      <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;"></video>
+    </a>
     <div class="card-body">
       <h4 class="card-title"><%= @addition_video_title[num] %></h4>
       <i class="fa fa-thumbs-up" style="font-size: 1.5rem;">
       <span class="badge badge-pill badge-secondary" id="good-num">100</span>
       </i>
+      <button type="button" class="btn-like" style="font-size: 1.5rem;">
+        <i class="fa fa-thumbs-up"></i>
+        <span class="badge badge-pill badge-secondary" id="good-num"><%= @addition_video_data[num].get_likes_number(@addition_video_data[num].id) %></span>
+      </button>
     </div>
   </div>
 <% end %>
