--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,3 +26,11 @@ ul.tagit{
 ul.tagit input[type="text"]{
   padding: 0 .75rem;
 }
+
+// いいねボタン
+button.btn-like{
+  font-size: 1.5rem;
+  background-color: rgba(255, 0, 0, 0);
+  border: none;
+}
+
