--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,15 +1,16 @@
   <div class="content">
     <div class="col-12 mx-auto my-1 infinite-content">
     <% for num in 0..@initial_video_title.size-1 do %>
-      <div class="card">
+      <div class="card mb-3">
         <a href="/video/<%= @initial_video_id[num] %>">
         <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;">
         </a>
         <div class="card-body">
           <h4 class="card-title"><%= @initial_video_title[num] %></h4>
-          <i class="fa fa-thumbs-up" style="font-size: 1.5rem;">
-            <span class="badge badge-pill badge-secondary" id="good-num">100</span>
-          </i>
+          <button type="button" class="btn-like" style="font-size: 1.5rem;">
+            <i class="fa fa-thumbs-up"></i>
+            <span class="badge badge-pill badge-secondary" id="good-num"><%= @initial_video_data[num].get_likes_number(@initial_video_data[num].id) %></span>
+          </button>
         </div>
       </div>
     <% end %>
@@ -29,6 +30,20 @@
       status: '.page-load-status',
       history: false,
     });
+
+  /*$(document).on('click', '.btn-like', function(e){
+    var state = $('button').attr('id');
+    if(state === 'before-like'){
+      console.log($('button').attr('id'))
+      $('.btn-like').css('color', '#ffff00');
+    }else if(state === 'after-like'){
+      console.log($('button').attr('id'))
+      $('.btn-like').css('color', '#ffff00');
+    }else{
+      console.log($('button').attr('id'))
+    }
+  })*/;
+
   </script>
   <% end %>
 
