--- a/app/views/static_pages/search.html.erb
+++ b/app/views/static_pages/search.html.erb
@@ -18,7 +18,7 @@
         <div class="content">
           <div class="col-12 mx-auto my-1 infinite-content">
           <% for num in 0..@initial_video_title.size-1 do %>
-            <div class="card">
+            <div class="card mb-3">
               <a href="/video/<%= @initial_video_id[num] %>">
               <img class="card-img-top img-fluid" src="<%= asset_path "img_bg_top.jpg" %>" alt="" style="height: 20rem;">
               </a>
