--- a/app/views/static_pages/video.html.erb
+++ b/app/views/static_pages/video.html.erb
@@ -13,10 +13,8 @@
       </video>
       <div class="mt-3">
         <h3 class="font-weight-bold"><%= @name %></h3>
-        <div style="display: inline;">
-          <i class="fa fa-thumbs-up" style="font-size: 1.5rem; white-space: nowrap;">
-            <span class="badge badge-pill badge-secondary" id="good-num">100</span>
-          </i>
+        <div id="div-like" style="display: inline;">
+          <%= render partial: "likes", locals: {video: @video_data[0]} %>
         </div>
       </div>
       <div class="mt-3 border-top">
