--- a/app/views/static_pages/video.html.erb
+++ b/app/views/static_pages/video.html.erb
@@ -9,7 +9,7 @@
   <div class="content">
     <div class="col-12 mx-auto my-1">
       <video id="my-video" class="video-js vjs-default-skin card-img-top" controls preload="auto" width="100%" height="264" poster="" data-setup="{}">
-        <source src="<%= asset_path "uploads/video/#{@m3u8}" %>" type="application/x-mpegURL">
+        <source src="<%= asset_path "uploads/video/#{@file}" %>" type="application/x-mpegURL">
       </video>
       <div class="mt-3">
         <h3 class="font-weight-bold"><%= @name %></h3>
