--- a/app/views/static_pages/video.html.erb
+++ b/app/views/static_pages/video.html.erb
@@ -1,15 +1,7 @@
-<%= content_for :video_js_css do%>
-  <link href="http://vjs.zencdn.net/5.19.2/video-js.css" rel="stylesheet">
-<% end %>
-<%= content_for :video_js do %>
-  <script src="http://vjs.zencdn.net/5.19.2/video.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.12.2/videojs-contrib-hls.min.js"></script>
-<% end %>
-
   <div class="content">
     <div class="col-12 mx-auto my-1">
-      <video id="my-video" class="video-js vjs-default-skin card-img-top" controls preload="auto" width="100%" height="264" poster="" data-setup="{}">
-        <source src="<%= asset_path "uploads/video/#{@file}" %>" type="application/x-mpegURL">
+      <video id="my-video" class="card-img-top" controls controlslist="nodownload" preload="auto" width="100%" height="264" poster="" data-setup="{}">
+        <source src="<%= asset_path "https://object-storage.tyo1.conoha.io/v1/nc_ae525541a58a443c98717ded126b6ac3/shirobuhi_obs/uploads/#{@file}" %>" type="video/mp4">
       </video>
       <div class="mt-3">
         <h3 class="font-weight-bold"><%= @name %></h3>
@@ -24,8 +16,4 @@
     </div>
   </div>
 
-  <%= content_for :index_pagination do %>
-  <script>
-  </script>
-  <% end %>
 
