[modify] メール認証の際のメッセージ表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
         <% end %>
     </nav>
 
+    <p class="font-italic border mx-auto"><%= notice %></p>
     <%= yield %>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-bottom text-center nav-bottom menu-bar">
